[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
#bracket-lib = {version="~0.8", features=["webgpu"], default-features=false } 
legion = "=0.3.1"
serde = { version = "=1.0.115" }
ron = "=0.6.1"

[profile.release]
lto = "thin"
